Reframe site for thought leadership; add Writing section and first two posts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Joseph Tan, PhD — Behavioral Health Integration</title>
-  <meta name="description" content="Joseph Tan, PhD is a clinical psychologist and Director of Integrated Behavioral Health at UVA Family Medicine, specializing in Primary Care Behavioral Health implementation and consulting." />
+  <meta name="description" content="Joseph Tan, PhD is a clinical psychologist and Director of Integrated Behavioral Health at UVA Family Medicine, specializing in Primary Care Behavioral Health." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -18,8 +18,9 @@
       <span class="nav-name">Joseph Tan, PhD</span>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a href="#consulting">Consulting</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#expertise">Expertise</a></li>
+        <li><a href="writing.html">Writing</a></li>
+        <li><a href="#connect">Connect</a></li>
       </ul>
     </div>
   </nav>
@@ -34,7 +35,7 @@
         <div class="hero-text">
           <h1>Joseph Tan</h1>
           <div class="credentials">PhD · Clinical Psychologist</div>
-          <p>Director of Integrated Behavioral Health, UVA Department of Family Medicine. Consultant and implementation advisor for primary care behavioral health programs.</p>
+          <p>Director of Integrated Behavioral Health, UVA Department of Family Medicine. I write and think about building behavioral health systems that work in the reality of primary care.</p>
         </div>
       </div>
     </div>
@@ -50,10 +51,10 @@
           I'm a clinical psychologist and the Director of Integrated Behavioral Health in the Department of Family Medicine at the University of Virginia School of Medicine. In that role, I oversee clinical services, trainee education, and strategic development for UVA's Primary Care Behavioral Health (PCBH) program across multiple clinic sites.
         </p>
         <p>
-          My work sits at the intersection of clinical care, health systems, and implementation science. I help primary care practices build behavioral health programs that are sustainable, evidence-based, and actually work in the reality of busy clinical environments — not just in ideal conditions.
+          My work sits at the intersection of clinical care, health systems, and implementation science. I'm interested in how primary care practices build behavioral health programs that are sustainable, evidence-based, and actually work in the reality of busy clinical environments — not just in ideal conditions.
         </p>
         <p>
-          Outside of UVA, I consult with health systems and primary care organizations on behavioral health integration strategy, model selection, and program implementation. I bring a practitioner's perspective to implementation work: I've built these programs from the inside, supervised the clinicians who staff them, and navigated the operational and cultural challenges that don't show up in the literature.
+          I also work externally with health systems and primary care organizations on behavioral health integration strategy, model selection, and program development. I write about these topics because most of what gets published about integrated behavioral health is either too abstract to be actionable or too narrow to generalize. There's a gap between the evidence base and what practitioners actually need to build good programs.
         </p>
 
         <div class="affiliations">
@@ -67,22 +68,22 @@
     </div>
   </section>
 
-  <!-- Consulting -->
-  <section id="consulting">
+  <!-- Expertise -->
+  <section id="expertise">
     <div class="container">
-      <div class="section-label">Consulting</div>
-      <h2>Behavioral Health Integration Advisory</h2>
+      <div class="section-label">Expertise</div>
+      <h2>Areas of Focus</h2>
       <p style="color: #4a5568; margin-bottom: 2rem; font-size: 1.05rem; max-width: 640px;">
-        I work with health systems, primary care organizations, and practice groups to design and build integrated behavioral health programs. Engagements are typically project-based or retainer, scoped to the organization's stage and needs.
+        These are the domains I work in, write about, and have spent the past several years building firsthand knowledge of — from program launch through ongoing operations.
       </p>
 
       <div class="services-grid">
         <div class="service-card">
           <h3>Program Development</h3>
           <ul>
-            <li>Primary Care Behavioral Health (PCBH) model implementation</li>
-            <li>Collaborative Care Model (CoCM) development</li>
-            <li>Hybrid and co-location model design</li>
+            <li>Primary Care Behavioral Health (PCBH) model</li>
+            <li>Collaborative Care Model (CoCM)</li>
+            <li>Hybrid and co-location models</li>
             <li>Readiness assessment and model selection</li>
           </ul>
         </div>
@@ -90,36 +91,33 @@
         <div class="service-card">
           <h3>Operations &amp; Workflow</h3>
           <ul>
-            <li>Epic workflow and documentation template design</li>
+            <li>Epic workflow and documentation design</li>
             <li>Clinical protocol development</li>
-            <li>Warm handoff and referral pathway design</li>
-            <li>Measurement-based care implementation</li>
+            <li>Warm handoff and referral pathways</li>
+            <li>Measurement-based care</li>
           </ul>
         </div>
 
         <div class="service-card">
           <h3>People &amp; Strategy</h3>
           <ul>
-            <li>BHC hiring and onboarding frameworks</li>
-            <li>Staff training and competency development</li>
-            <li>Implementation planning using EPIS framework</li>
-            <li>Sustainability and growth planning</li>
+            <li>BHC hiring and onboarding</li>
+            <li>Trainee supervision and education</li>
+            <li>Implementation planning (EPIS framework)</li>
+            <li>Program sustainability and growth</li>
           </ul>
         </div>
-      </div>
-
-      <div class="engagement-note">
-        I typically work with organizations at any stage — from early exploration through active program growth. If you're trying to figure out where to start, that's a fine place to begin the conversation.
       </div>
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact">
-    <div class="container">
-      <h2>Get in Touch</h2>
-      <p>Interested in consulting support or have a question about behavioral health integration? I'm happy to connect.</p>
-      <a href="mailto:tan.joseph.s@gmail.com" class="contact-email">tan.joseph.s@gmail.com</a>
+  <!-- Connect -->
+  <section id="connect">
+    <div class="container" style="text-align: center;">
+      <div class="section-label" style="color: #63b3ed;">Connect</div>
+      <h2 style="color: #fff; margin-bottom: 1rem;">Let's Connect</h2>
+      <p>I'm always glad to connect with colleagues working in integrated behavioral health — whether you're building a program, doing research in this space, or just thinking through the same questions.</p>
+      <a href="https://www.linkedin.com/in/joseph-tan-phd-psychology/" class="contact-email" target="_blank" rel="noopener">Connect on LinkedIn</a>
     </div>
   </section>
 
