Redesign: Read Only template with navy palette, headshot, sidebar layout

--- a/index.html
+++ b/index.html
@@ -1,130 +1,160 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Joseph Tan, PhD — Behavioral Health Integration</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <meta name="description" content="Joseph Tan, PhD is a clinical psychologist and Director of Integrated Behavioral Health at UVA Family Medicine, specializing in Primary Care Behavioral Health." />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
 </head>
-<body>
+<body class="is-preload">
 
-  <!-- Navigation -->
-  <nav>
-    <div class="container">
-      <span class="nav-name">Joseph Tan, PhD</span>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
+  <!-- Header / Sidebar -->
+  <section id="header">
+    <header>
+      <span class="image avatar"><img src="images/headshot.jpg" alt="Joseph Tan, PhD" /></span>
+      <h1 id="logo"><a href="#">Joseph Tan, PhD</a></h1>
+      <p>Clinical Psychologist<br />
+      Director of Integrated Behavioral Health<br />
+      UVA Department of Family Medicine</p>
+    </header>
+    <nav id="nav">
+      <ul>
+        <li><a href="#about" class="active">About</a></li>
         <li><a href="#expertise">Expertise</a></li>
-        <li><a href="writing.html">Writing</a></li>
+        <li><a href="#writing">Writing</a></li>
         <li><a href="#connect">Connect</a></li>
       </ul>
-    </div>
-  </nav>
+    </nav>
+    <footer>
+      <ul class="icons">
+        <li><a href="https://www.linkedin.com/in/joseph-tan-phd-psychology/" class="icon brands fa-linkedin" target="_blank" rel="noopener"><span class="label">LinkedIn</span></a></li>
+      </ul>
+    </footer>
+  </section>
 
-  <!-- Hero -->
-  <section id="hero">
-    <div class="container">
-      <div class="hero-inner">
-        <div class="hero-photo-placeholder">
-          Photo<br>coming<br>soon
+  <!-- Wrapper -->
+  <div id="wrapper">
+    <div id="main">
+
+      <!-- About -->
+      <section id="about">
+        <div class="container">
+          <header class="major">
+            <h2>Bringing Behavioral Health Into Primary Care</h2>
+            <p>I'm a clinical psychologist working at the intersection of clinical care, health systems, and implementation science.</p>
+          </header>
+          <p>I serve as Director of Integrated Behavioral Health in the Department of Family Medicine at the University of Virginia School of Medicine, where I oversee clinical services, trainee education, and strategic development for UVA's Primary Care Behavioral Health (PCBH) program across multiple clinic sites.</p>
+          <p>My interest is in how primary care practices build behavioral health programs that are sustainable, evidence-based, and actually work in the reality of busy clinical environments — not just in ideal conditions. I also work externally with health systems and primary care organizations on behavioral health integration strategy, model selection, and program development.</p>
+          <p>I write about these topics because most of what gets published about integrated behavioral health is either too abstract to be actionable or too narrow to generalize. There's a gap between the evidence base and what practitioners actually need to build good programs.</p>
+          <ul class="feature-icons">
+            <li class="icon solid fa-hospital">UVA School of Medicine, Dept. of Family Medicine</li>
+            <li class="icon solid fa-stethoscope">UVA Physicians Group — Technical Advisor, BHI</li>
+          </ul>
         </div>
-        <div class="hero-text">
-          <h1>Joseph Tan</h1>
-          <div class="credentials">PhD · Clinical Psychologist</div>
-          <p>Director of Integrated Behavioral Health, UVA Department of Family Medicine. I write and think about building behavioral health systems that work in the reality of primary care.</p>
+      </section>
+
+      <!-- Expertise -->
+      <section id="expertise">
+        <div class="container">
+          <h3>Areas of Focus</h3>
+          <p>These are the domains I work in, write about, and have spent the past several years building firsthand knowledge of — from program launch through ongoing operations.</p>
+          <div class="features">
+            <article>
+              <div class="inner">
+                <h4>Program Development</h4>
+                <ul>
+                  <li>Primary Care Behavioral Health (PCBH) model</li>
+                  <li>Collaborative Care Model (CoCM)</li>
+                  <li>Hybrid and co-location models</li>
+                  <li>Readiness assessment and model selection</li>
+                </ul>
+              </div>
+            </article>
+            <article>
+              <div class="inner">
+                <h4>Operations &amp; Workflow</h4>
+                <ul>
+                  <li>Epic workflow and documentation design</li>
+                  <li>Clinical protocol development</li>
+                  <li>Warm handoff and referral pathways</li>
+                  <li>Measurement-based care</li>
+                </ul>
+              </div>
+            </article>
+            <article>
+              <div class="inner">
+                <h4>People &amp; Strategy</h4>
+                <ul>
+                  <li>BHC hiring and onboarding</li>
+                  <li>Trainee supervision and education</li>
+                  <li>Implementation planning (EPIS framework)</li>
+                  <li>Program sustainability and growth</li>
+                </ul>
+              </div>
+            </article>
+          </div>
         </div>
+      </section>
+
+      <!-- Writing -->
+      <section id="writing">
+        <div class="container">
+          <h3>Writing &amp; Media</h3>
+          <p>Articles on behavioral health integration and primary care psychology, plus selected media appearances. <a href="writing.html">See all writing and media →</a></p>
+          <div class="features">
+            <article>
+              <div class="inner">
+                <h4><a href="https://engagement.virginia.edu/learn/thoughts-from-the-lawn/20251112-Tan" target="_blank" rel="noopener">Finding Your Center: Using Values Clarification to Navigate Stress</a></h4>
+                <p><em>Thoughts From The Lawn, UVA &mdash; November 2025</em><br />
+                What if stress is a signal that you've drifted from what actually matters? A practical introduction to the Bullseye exercise from ACT.</p>
+              </div>
+            </article>
+            <article>
+              <div class="inner">
+                <h4><a href="posts/myths-about-therapy.html">Myths vs. Facts About Therapy</a></h4>
+                <p><em>September 2025</em><br />
+                Modern evidence-based therapy is focused, skills-based, and often far briefer than the Hollywood version. Five persistent myths, corrected.</p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- Connect -->
+      <section id="connect">
+        <div class="container">
+          <h3>Let's Connect</h3>
+          <p>I'm always glad to connect with colleagues working in integrated behavioral health — whether you're building a program, doing research in this space, or just thinking through the same questions.</p>
+          <ul class="actions">
+            <li><a href="https://www.linkedin.com/in/joseph-tan-phd-psychology/" class="button primary" target="_blank" rel="noopener">Connect on LinkedIn</a></li>
+            <li><a href="writing.html" class="button">Read my writing</a></li>
+          </ul>
+        </div>
+      </section>
+
+    </div>
+
+    <!-- Footer -->
+    <section id="footer">
+      <div class="container">
+        <ul class="copyright">
+          <li>&copy; Joseph Tan, PhD. All rights reserved.</li>
+          <li>Charlottesville, VA</li>
+        </ul>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- About -->
-  <section id="about">
-    <div class="container">
-      <div class="section-label">About</div>
-      <h2>Bringing Behavioral Health Into Primary Care</h2>
-      <div class="about-body">
-        <p>
-          I'm a clinical psychologist and the Director of Integrated Behavioral Health in the Department of Family Medicine at the University of Virginia School of Medicine. In that role, I oversee clinical services, trainee education, and strategic development for UVA's Primary Care Behavioral Health (PCBH) program across multiple clinic sites.
-        </p>
-        <p>
-          My work sits at the intersection of clinical care, health systems, and implementation science. I'm interested in how primary care practices build behavioral health programs that are sustainable, evidence-based, and actually work in the reality of busy clinical environments — not just in ideal conditions.
-        </p>
-        <p>
-          I also work externally with health systems and primary care organizations on behavioral health integration strategy, model selection, and program development. I write about these topics because most of what gets published about integrated behavioral health is either too abstract to be actionable or too narrow to generalize. There's a gap between the evidence base and what practitioners actually need to build good programs.
-        </p>
+  </div>
 
-        <div class="affiliations">
-          <h3>Affiliations</h3>
-          <ul>
-            <li>University of Virginia School of Medicine, Department of Family Medicine</li>
-            <li>UVA Physicians Group — Technical Advisor, Behavioral Health Integration</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Expertise -->
-  <section id="expertise">
-    <div class="container">
-      <div class="section-label">Expertise</div>
-      <h2>Areas of Focus</h2>
-      <p style="color: #4a5568; margin-bottom: 2rem; font-size: 1.05rem; max-width: 640px;">
-        These are the domains I work in, write about, and have spent the past several years building firsthand knowledge of — from program launch through ongoing operations.
-      </p>
-
-      <div class="services-grid">
-        <div class="service-card">
-          <h3>Program Development</h3>
-          <ul>
-            <li>Primary Care Behavioral Health (PCBH) model</li>
-            <li>Collaborative Care Model (CoCM)</li>
-            <li>Hybrid and co-location models</li>
-            <li>Readiness assessment and model selection</li>
-          </ul>
-        </div>
-
-        <div class="service-card">
-          <h3>Operations &amp; Workflow</h3>
-          <ul>
-            <li>Epic workflow and documentation design</li>
-            <li>Clinical protocol development</li>
-            <li>Warm handoff and referral pathways</li>
-            <li>Measurement-based care</li>
-          </ul>
-        </div>
-
-        <div class="service-card">
-          <h3>People &amp; Strategy</h3>
-          <ul>
-            <li>BHC hiring and onboarding</li>
-            <li>Trainee supervision and education</li>
-            <li>Implementation planning (EPIS framework)</li>
-            <li>Program sustainability and growth</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Connect -->
-  <section id="connect">
-    <div class="container" style="text-align: center;">
-      <div class="section-label" style="color: #63b3ed;">Connect</div>
-      <h2 style="color: #fff; margin-bottom: 1rem;">Let's Connect</h2>
-      <p>I'm always glad to connect with colleagues working in integrated behavioral health — whether you're building a program, doing research in this space, or just thinking through the same questions.</p>
-      <a href="https://www.linkedin.com/in/joseph-tan-phd-psychology/" class="contact-email" target="_blank" rel="noopener">Connect on LinkedIn</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>Joseph Tan, PhD &nbsp;·&nbsp; Charlottesville, VA</p>
-  </footer>
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.scrollex.min.js"></script>
+  <script src="assets/js/jquery.scrolly.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 </html>
